--- a/docs/rtk-query/usage/streaming-updates.mdx
+++ b/docs/rtk-query/usage/streaming-updates.mdx
@@ -9,7 +9,9 @@ hide_title: true
 
 # Streaming Updates
 
-RTK Query gives you the ability to receive **streaming updates** for persistent queries. This enables a query to react to an ongoing connection to the server (typically using WebSockets), updating the cached data as updates to the query are received from the server when they occur.
+## Overview
+
+RTK Query gives you the ability to receive **streaming updates** for persistent queries. This enables a query to establish an ongoing connection to the server (typically using WebSockets), and apply updates to the cached data as additional information is received from the server.
 
 Streaming updates can be used to enable the API to receive real-time updates to the back-end data, such as new entries being created, or important properties being updated.
 
@@ -31,7 +33,17 @@ Example use cases that benefit from streaming updates are:
 - Real-time multiplayer games
 - Collaborative document editing with multiple concurrent users
 
-## Examples
+## Using the `onCacheEntryAdded` Lifecycle
+
+The `onCacheEntryAdded` lifecycle callback lets you write arbitrary async logic that will be executed after a new cache entry is added to the RTK Query cache (ie, after a component has created a new subscription to a given endpoint+params combination).
+
+`onCacheEntryAdded` will be called with two arguments: the `arg` that was passed to the subscription, and an options object containing "lifecycle promises" and utility functions. You can use these to write sequenced logic that waits for data to be added, initiates server connections, applies partial updates, and cleans up the connection when the query subscription is removed.
+
+Typically, you will `await cacheDataLoaded` to determine when the first data has been fetched, then use the `updateCacheData` utility to apply streaming updates as messages are received. `updateCacheData` is an Immer-powered callback that receives a `draft` of the current cache value. You may "mutate" the draft value to update it as needed based on the received values. RTK Query will then dispatch an action that applies a diffed patch based on those changes.
+
+Finally, you can `await cacheEntryRemoved` to know when to clean up any server connections.
+
+## Streaming Update Examples
 
 ### Websocket Chat API
 
