--- a/docs/rtk-query/usage/customizing-create-api.mdx
+++ b/docs/rtk-query/usage/customizing-create-api.mdx
@@ -11,14 +11,14 @@ hide_title: true
 
 Currently, RTK Query includes two variants of `createApi`:
 
-- `createBaseApi` which contains only the basic redux logic (the core module)
-- `createApi` which contains both the core and react-hooks modules
+- `createBaseApi`, which contains only the UI-agnostic Redux logic (the core module)
+- `createApi`, which contains both the core and React hooks modules
 
 You can create your own versions of `createApi` by either specifying non-default options for the modules or by adding your own modules.
 
 ## Customizing the React-Redux Hooks
 
-If you want the hooks to use different versions of `useSelector` or `useDispatch`, for example if you are using a custom context, you can pass these in at module creation:
+If you want the hooks to use different versions of `useSelector` or `useDispatch`, such as if you are using a custom context, you can pass these in at module creation:
 
 ```ts
 import * as React from 'react'
